<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Choon Paan</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="signin"><u>Sign In</u></string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="are_you_new">Are you new?</string>
    <string name="login">Login</string>
    <string name="cart">Cart</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="enter_your_email">Enter Your Email:</string>
    <string name="submit1" tools:ignore="DuplicateDefinition">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="accept_all_terms_and_conditions">Accept All Terms and Conditions</string>
    <string name="david">David</string>
    <string name="perera">Perera</string>
    <string name="david_perera_gmail_com">david.perera@gmail.com</string>
    <string name="_07">07********</string>
    <string name="no_23_peris_rd_nawala">No.23,Peris Rd, Nawala</string>
    <string name="password2">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="checkbox">CheckBox</string>
    <string name="cancel">Cancel</string>
    <string name="checkout">CheckOut</string>

    <string name="reenterpass">New Password:</string>
    <string name="re_enter_new_password">Re-enter New Password:</string>

    <string name="sausage_bun_nrs_30">Sausage Buns</string>
    <string name="complains">Complains</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="complain">Complain</string>
    <string name="submit">Submit</string>
    <string name="todo1" tools:ignore="DuplicateDefinition">todo</string>
    <string name="spongy_cake_nrs_35">Spongy Cake</string>
    <string name="jam_bun_nrs_40">Jam Bun </string>
    <string name="_2_kiribath_pieces_n_with_lunumiris_nrs_30">2 Kiribath Pieces with Lunumiris</string>
    <string name="favourtite">Favourite</string>
    <string name="contact_Us">Contact Us</string>
    <string name="bakery">Bakery</string>
    <string name="delivery_person">Delivery Person</string>
    <string name="sasirikabakery_gmail_com">sasirikabakery_gmail_com</string>
    <string name="todo2">todo</string>
    <string name="todo3">todo</string>
    <string name="todo4">todo</string>
    <string name="_545452532">545452532</string>
    <string name="todo25" tools:ignore="DuplicateDefinition">todo</string>
    <string name="_94724844307">94724844307</string>
    <string name="about_help">about_help</string>
    <string name="About">About</string>

    <string name="title_activity_map">Map_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chun_paan_items">Chun Paan Items</string>
    <string name="tea_bun">Tea Bun</string>
    <string name="rs_35">Rs.35</string>
    <string name="bread">Bread</string>
    <string name="rs_80">Rs.80</string>
    <string name="payment">Payment</string>
    <string name="bank_name">Bank Name:</string>
    <string name="sampath_bank">Sampath Bank</string>
    <string name="master">Master</string>
    <string name="visa">Visa</string>
    <string name="card_number">Card Number:</string>
    <string name="carsno">**** **** **** ****</string>
    <string name="namecu">Name:</string>
    <string name="david_perera">David Perera</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="_04_24">04/24</string>
    <string name="cvv">CVV:</string>
    <string name="pin">***</string>
    <string name="pay">Pay</string>
    <string name="select_the_type">Select the type:</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
<<<<<<< HEAD
    <string name="order_history">Order History</string>
    <string name="jam_bun">Jam Bun</string>
    <string name="rs_40">Rs.40</string>
=======
    <string name="rs_50">Rs.50</string>
    <string name="Pittu">Pittu</string>
    <string name="bill">E-bill</string>
    <string name="e_bill">E-bill</string>
    <string name="table">table</string>
    <string name="pre_order_page">Pre-order page</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
>>>>>>> 13cfce9fd16a0189bccc0f066c012b3f7ae085b4
</resources>