<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/untitled_2"
    tools:context=".ActivityContactUs">


    <TextView
        android:id="@+id/ContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="581dp"
        android:background="@drawable/dark_background"
        android:fontFamily="serif"
        android:text="@string/contact_Us"
        android:textColor="#FDF3E9"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"  />



    <Button
        android:id="@+id/FavbuttonNav"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_calendar_view_day_24"
        app:layout_constraintBottom_toTopOf="@+id/ContactUs"
        app:layout_constraintEnd_toStartOf="@+id/backButtonHelp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backButtonHelp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="344dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_back_arrow_24"
        android:scaleX="-1"
        app:layout_constraintBottom_toTopOf="@+id/ContactUs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="377dp"
        android:layout_height="428dp"
        android:background="@drawable/light_backgroud"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContactUs"
        app:layout_constraintVertical_bias="0.234" />

    <TextView
        android:id="@+id/bakery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="serif"
        android:text="@string/bakery"
        android:textColor="#794500"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />


    <TextView
        android:id="@+id/delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:fontFamily="serif"
        android:text="@string/delivery_person"
        android:textColor="#794500"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="49dp"
        android:layout_height="44dp"
        android:layout_marginBottom="13dp"
        android:background="#004E1616"
        android:backgroundTint="#00732823"
        android:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.274"
        app:srcCompat="@android:drawable/stat_sys_phone_call"
        tools:srcCompat="@drawable/cdf99d667527c15f3fb21c5273b251f3"
        android:contentDescription="@string/todo1" />

    <EditText
        android:id="@+id/editTextPhone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/_545452532"
        android:textColor="#794500"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.288"
        tools:ignore="DuplicateIds,LabelFor" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="51dp"
        android:layout_height="47dp"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:srcCompat="@drawable/black_email_icon_clipart_2"
        android:contentDescription="@string/todo2"
        tools:ignore="HardcodedText" />


    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/sasirikabakery_gmail_com"
        android:textColor="#794500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.458"
        android:autofillHints=""
        tools:ignore="HardcodedText,LabelFor" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="112dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.642"
        app:srcCompat="@drawable/whatsapp_transparent_23"
        android:contentDescription="@string/todo3"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/_545452532"
        android:textColor="#794500"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.592"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="47dp"
        android:layout_height="286dp"
        android:layout_marginTop="232dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:srcCompat="@drawable/cdf99d667527c15f3fb21c5273b251f3"
        android:contentDescription="@string/todo4" />

    <EditText
        android:id="@+id/editTextPhone3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/_94724844307"
        android:textColor="#794500"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/delivery"
        app:layout_constraintVertical_bias="0.446"
        android:autofillHints=""
        android:labelFor="@id/editTextPhone3"/>


</androidx.constraintlayout.widget.ConstraintLayout>