<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/untitled_2"
    tools:context=".ForgetPassword2Activity">

    <Button
        android:id="@+id/backButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_baseline_back_arrow_24"
        android:scaleX="-1"
        app:layout_constraintBottom_toTopOf="@+id/ForgotTopic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ForgotTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_background"
        android:fontFamily="serif"
        android:text="@string/forgot_password1"
        android:textAlignment="center"
        android:textColor="#FDF3E9"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgotBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotBox"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginBottom="356dp"
        android:background="@drawable/light_backgroud"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotTopic"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/forgetNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/enter_your_email"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/forgotBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/forgotBox"
        app:layout_constraintVertical_bias="0.205" />


    <Button
        android:id="@+id/submitButton"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:backgroundTint="#FDF3E9"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/submit"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotBox"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/emailInputText"
        android:layout_width="353dp"
        android:layout_height="39dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="@drawable/text_box"
        android:inputType="textEmailAddress"
        android:text="@string/david_perera_gmail_com"
        android:textColor="#512D18"
        android:paddingStart="12dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/forgotBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetNameText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/light_backgroud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButton"
        app:layout_constraintVertical_bias="0.164" />

    <Button
        android:id="@+id/submitBtn02"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:backgroundTint="#FDF3E9"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/submit"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/reenterpass"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_enter_new_password"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.631" />

    <EditText
        android:id="@+id/newPassInput"
        android:layout_width="325dp"
        android:layout_height="35dp"
        android:autofillHints=""
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="@string/password2"
        android:textColorHint="#808080"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="#512D18"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.588"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/reEnterPassInput"
        android:layout_width="325dp"
        android:layout_height="35dp"
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="@string/re_enter_new_password"
        android:textColorHint="#808080"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="#512D18"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.28"
        tools:ignore="MissingConstraints,RtlSymmetry"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>