<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotLButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/untitled_2"
    tools:context=".Activity_Login">

    <Button
        android:id="@+id/backButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_back_arrow_24"
        android:scaleX="-1"
        app:layout_constraintEnd_toStartOf="@+id/helpButton1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/helpButton1"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_help_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/loginBox"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginBottom="284dp"
        android:background="@drawable/light_backgroud"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/usenameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/username"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginBox" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="84dp"
        android:text="@string/password"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/loginBox"
        app:layout_constraintStart_toStartOf="@+id/loginBox" />

    <Button
        android:id="@+id/loginPageButton"
        android:layout_width="120dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FDF3E9"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBox"
        app:rippleColor="#512D18" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="110dp"
        android:fontFamily="casual"
        android:text="@string/are_you_new"
        android:textColor="#F5E1CD"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPageButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signInLpageButton"
        android:layout_width="248dp"
        android:layout_height="61dp"
        android:layout_marginBottom="103dp"
        android:background="#00FFFFFF"
        android:fontFamily="serif"
        android:text="@string/signin"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/forgotPwButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="serif"
        android:text="@string/forgot_password"
        android:textColor="#512D18"
        android:textColorHighlight="#512D18"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/loginBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="86dp"
        android:background="@drawable/dark_background"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textColor="#FDF3E9"
        android:textSize="80sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/loginBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="213dp"
        android:layout_height="39dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/text_box"
        android:ems="20"
        android:paddingLeft="12dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/loginBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="@+id/loginBox" />

    <EditText
        android:id="@+id/userNameInputText"
        android:layout_width="213dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/text_box"
        android:ems="20"
        android:paddingLeft="12dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="@+id/loginBox"
        app:layout_constraintTop_toTopOf="@+id/loginBox"/>

</androidx.constraintlayout.widget.ConstraintLayout>