<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/untitled_2"
    tools:context=".activity_ebill">

    <Button
        android:id="@+id/backbuttonNA"
        android:layout_width="80dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_back_arrow_24"
        android:scaleX="-1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/navNewArrivals"
        android:layout_width="59dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_calendar_view_day_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="581dp"
        android:background="@drawable/dark_background"
        android:fontFamily="serif"
        android:text="@string/e_bill"
        android:textColor="#FDF3E9"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:contentDescription="@string/table"
        android:id="@+id/imageView9"
        android:layout_width="411dp"
        android:layout_height="463dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.116"
        app:srcCompat="@drawable/bill" />

    <Button
        android:id="@+id/preOrderPageButton"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FDF3E9"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/pre_order_page"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:rippleColor="#512D18" />


</androidx.constraintlayout.widget.ConstraintLayout>